traefik/kubernetes-native-microservices/k8s-experiment/traefik/traefik.yml
---
kind: DaemonSet
apiVersion: apps/v1
metadata:
  name: traefik
  labels:
    app: traefik
spec:
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      hostNetwork: true
      containers:
        - name: traefik
          image: traefik:v2.7.3
          ports:
            - name: web
              containerPort: 80
              hostPort: 80
            - name: admin
              containerPort: 8080
              hostPort: 8080
          args:
            - --log.level=INFO
            - --accesslog
            - --api=true
            - --api.dashboard=true
            - --api.insecure
            - --metrics.prometheus=true
            - --metrics.prometheus.addentrypointslabels
            - --metrics.prometheus.addserviceslabels
            - --entrypoints.web.address=:80
            - --entryPoints.websecure.address=:443
            - --providers.kubernetescrd
            - --providers.kubernetesingress
---
apiVersion: v1
kind: Service
metadata:
  name: traefik
spec:
  type: LoadBalancer
  ports:
    - name: web
      port: 80
    - name: websecure
      port: 443
    - name: admin
      port: 8080
  selector:
    app: traefik
