traefik/kubernetes-native-microservices/k8s-experiment/traefik/dashboard-route.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`traefik.1buyway.com`)
    kind: Rule
    services:
    - name: traefik
      port: 8080
